syntax = "proto3";

option go_package = "github.com/datumtechs/datum-network-carrier/pb/datacenter/api";
//一个proto文件会生成一个最外部类，里面会包含很多子类，指定这个proto文件生成的类所属的包名
option java_package = "com.platon.datum.storage.grpc.datacenter.api";
//这个proto文件生成会为其中的所有message生成一个最外部类，此配置设置该类类名，如果没有指定此值，则类名为proto文件名的驼峰命名方法
option java_outer_classname = "Task";

package datacenter.api;

import "carrier/types/common.proto";
import "carrier/types/taskdata.proto";

message SaveTaskRequest {
  carrier.types.TaskPB task = 1;
}

message ListTaskByTaskIdsRequest {
  repeated string task_ids = 1;   // 任务Id列表
}

message ListTaskByIdentityRequest {
  string identity_id = 1;
  uint64 last_updated = 2;    // 从对应updateAt那条记录开始拉
  uint64 page_size = 3;       // 单次批量数据的返回条数
}

message ListTaskRequest {
  uint64 last_updated = 1;  // 从对应updateAt那条记录开始拉
  uint64 page_size = 2;     // 单次批量数据的返回条数
}

message ListTaskResponse {
  int32 status = 1;    // 响应码
  string msg = 2;      // 错误信息
  repeated carrier.types.TaskPB     tasks = 3;
}

message GetTaskDetailRequest {
  string task_id = 1;
}

message GetTaskDetailResponse {
  int32 status = 1;    // 响应码
  string msg = 2;      // 错误信息
  carrier.types.TaskPB task = 3;
}

message ListTaskEventRequest {
  string task_id = 1;
}

message ListTaskEventResponse {
  // 错误码，0 成功，1 异常
  int32 status = 1;
  // 错误信息
  string msg = 2;
  // 事件列表
  repeated carrier.types.TaskEvent task_events = 3;
}

// TaskService defines the interface to interact with the central data service.
service TaskService {

  // 存储任务
  rpc SaveTask(SaveTaskRequest) returns (carrier.types.SimpleResponse);

  // 查询任务详情（任务ID、节点ID、参与方标识）
  rpc GetTaskDetail(GetTaskDetailRequest) returns (GetTaskDetailResponse);

  // 查询任务列表
  rpc ListTask(ListTaskRequest) returns (ListTaskResponse);

  // 根据组织身份查询任务列表
  rpc ListTaskByIdentity(ListTaskByIdentityRequest) returns (ListTaskResponse);

  // 根据任务Ids查询任务列表 (v3.0)
  rpc ListTaskByTaskIds(ListTaskByTaskIdsRequest) returns (ListTaskResponse);

  // 查询任务的事件列表
  rpc ListTaskEvent(ListTaskEventRequest) returns (ListTaskEventResponse);

}
